--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,59 +4,51 @@
     android:layout_height="match_parent"
     android:background="@android:color/white">
 
-    <com.zhan.transparenttoolbar.widget.MyScrollView
-        android:id="@+id/main_sv_root"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
 
-        <LinearLayout
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
+
+    <zhan.transparent.widget.TransparentFrameLayout
+        android:id="@+id/tool_bar"
+        android:layout_width="match_parent"
+        android:layout_height="48dp">
+
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_height="match_parent"
+            >
 
             <TextView
-                android:id="@+id/main_head"
-                android:layout_width="match_parent"
-                android:layout_height="600dp"
-                android:background="@color/head_color"
-                android:gravity="center"
-                android:text=" this is Head"
+                android:id="@+id/title_tv"
+                android:textSize="16sp"
                 android:textColor="@android:color/white"
-                android:textSize="45sp"
-                android:textStyle="bold" />
+                android:text="smile"
+                android:visibility="gone"
+                android:layout_centerInParent="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                />
 
-            <TextView
+            <View
+                android:id="@+id/line"
+                android:visibility="gone"
+                android:layout_alignParentBottom="true"
+                android:background="#FF333333"
                 android:layout_width="match_parent"
-                android:layout_height="700dp"
-                android:background="@color/white"
-                android:gravity="top|center_horizontal"
-                android:paddingTop="100dp"
-                android:text=" this is Body"
-                android:textColor="@android:color/black"
-                android:textSize="45sp"
-                android:textStyle="bold" />
-        </LinearLayout>
-    </com.zhan.transparenttoolbar.widget.MyScrollView>
+                android:layout_height="0.5dp"/>
+        </RelativeLayout>
+    </zhan.transparent.widget.TransparentFrameLayout>
 
-    <com.zhan.transparenttoolbar.widget.TransparentToolBar
-        android:id="@+id/main_bar"
-        android:layout_width="match_parent"
-        android:layout_height="55dp">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:gravity="center"
-            android:text="Transparent toolbar"
-            android:textColor="@android:color/white"
-            android:textSize="16sp" />
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1px"
-            android:layout_alignParentBottom="true"
-            android:background="@android:color/black" />
-
-    </com.zhan.transparenttoolbar.widget.TransparentToolBar>
+    <TextView
+        android:id="@+id/num_tv"
+        android:textSize="33sp"
+        android:maxLength="6"
+        android:textColor="@android:color/black"
+        android:layout_centerInParent="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        />
 </RelativeLayout>
